--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -27,6 +27,8 @@
   <div class="vertical-center">
     <h1>The app is running correctly.</h1>
 
+    <p> Hello from Karl and Jack</p>
+
 
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
