added a test line

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,6 +29,8 @@
 
     <p> Hello from Karl and Jack</p>
 
+    <p> Test the test </p>
+
 
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
