--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,7 +29,7 @@
 
     <p> Hello from Karl and Jack</p>
 
-    <p> Test the test </p>
+    <p> Test the test 11</p>
 
 
     <p>Welcome to the Sparta Test App</p>
