--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,7 +32,7 @@
     <p> Test the test 11</p>
 
 
-    <p>Welcome to the Sparta Test App</p>
+    <p>Welcome to the Sporta Test App</p>
     <img src="/images/logo.png" />
   </div>
 </body>
