--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,10 +29,10 @@
 
     <p> Hello from Karl and Jack</p>
 
-    <p> Test the test 11</p>
+    <p> Test the test </p>
 
 
-    <p>Welcome to the Sporta Test App</p>
+    <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
   </div>
 </body>
